[MAJ] Readme Section Proj du jour

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -58,10 +58,11 @@ body
   background-color: rgb(170, 170, 170);
   height: 53px;
   width: 270px;
-  color: white;
   margin-top: 85px;
   text-align: center;
   padding-top: 30px;
+  color: white;
+  text-decoration: none;
 }
 
 
