--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 
 <div class="container">
   <div>
-    <h1>Uniform</h1>
-    <p>L'inscription devient plus simple</p>
+    <h1>The Super Form</h1>
+    <p>L'inscription LA plus simple</p>
     <hr width="15%">
     <ul>
       <li><i class="fas fa-file"></i> &nbsp;&nbsp; Un seul formulaire pour toutes les ecoles</li>
